[package]
name = "easy_deploy"
version = "0.1.0"
authors = ["adamrk <ark.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono={ version = "0.4.10", features = ["serde"] }
clap="2.33.0"
maplit="1.0.2"
prettytable-rs="0.8.0"
serde={ version = "1.0.104", features = ["derive"] }
serde_json="1.0.44"
tempfile="3.1.0"
text_io="0.1.7"

[dev-dependencies]
pretty_assertions = "0.6.1"